# PreScreeningAufgabe

./: .coverage  .gitignore  README.md  example1.txt  example10.txt  example15.txt  example20.txt  example5.txt  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yml
.github/workflows/: test.yml
dependecies/: pyvenv.cfg
src/pre_screening/: pre_screening_aufgabe.py
src/pre_screening_aufgabe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: .coverage  example1.txt  example10.txt  example15.txt  example20.txt  example5.txt  test_screening_aufgabe.py
